--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/core": "^7.7.7",
     "@commitlint/cli": "^8.3.4",
     "@commitlint/config-conventional": "^8.3.4",
+    "babel-plugin-add-module-exports": "^1.0.2",
     "babel-preset-thernandez": "0.0.14",
     "eslint": "^6.8.0",
     "husky": "^3.1.0",
