--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   ],
   "scripts": {
     "build": "babel src --out-dir dist",
-    "prepublish": "npm run build",
-    "release": "standard-version",
+    "release": "npm run build && standard-version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
