config: 🔧 Use commitlint-config-thernandez

--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
     "@babel/cli": "^7.11.5",
     "@babel/core": "^7.11.5",
     "@commitlint/cli": "^9.1.2",
-    "@commitlint/config-conventional": "^9.1.2",
     "babel-plugin-add-module-exports": "^1.0.2",
     "babel-preset-thernandez": "0.0.17",
+    "commitlint-config-thernandez": "0.0.3",
     "eslint": "^7.8.1",
+    "git-cz": "^4.7.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.13",
     "prettier": "^2.1.1",
