--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
+    "@emotion/eslint-plugin": "^11.0.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-compat": "^3.8.0",
-    "eslint-plugin-emotion": "^10.0.27",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
@@ -53,7 +53,7 @@
     "babel-preset-thernandez": "0.0.19",
     "commitlint-config-thernandez": "0.0.4",
     "eslint": "^7.13.0",
-    "git-cz": "^4.7.1",
+    "git-cz": "^4.7.3",
     "husky": "^5.0.0-beta.0",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
