--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "commitlint-config-thernandez": "0.0.4",
     "eslint": "^7.13.0",
     "git-cz": "^4.7.3",
-    "husky": "^5.0.0-beta.0",
+    "husky": "^5.0.1",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "standard-version": "^9.0.0"
