--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@babel/eslint-parser": "^7.12.1",
     "@commitlint/cli": "^11.0.0",
     "babel-plugin-add-module-exports": "^1.0.4",
-    "babel-preset-thernandez": "0.0.19",
+    "babel-preset-thernandez": "^0.0.20",
     "commitlint-config-thernandez": "0.0.4",
     "eslint": "^7.18.0",
     "git-cz": "^4.7.6",
