--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.13.7",
+    "@babel/runtime": "^7.13.8",
     "@emotion/eslint-plugin": "^11.2.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-compat": "^3.9.0",
@@ -46,12 +46,12 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.13.0",
-    "@babel/core": "^7.13.1",
-    "@babel/eslint-parser": "^7.13.4",
+    "@babel/core": "^7.13.8",
+    "@babel/eslint-parser": "^7.13.8",
     "@commitlint/cli": "^12.0.0",
     "babel-plugin-add-module-exports": "^1.0.4",
-    "babel-preset-thernandez": "^0.0.20",
-    "commitlint-config-thernandez": "0.0.4",
+    "babel-preset-thernandez": "^0.0.21",
+    "commitlint-config-thernandez": "^0.0.5",
     "eslint": "^7.20.0",
     "git-cz": "^4.7.6",
     "husky": "^5.1.1",
