fix: 🐛 Add prepare script yo stup husky

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build": "babel src --out-dir dist",
     "prepublishOnly": "npm run build",
     "release": "HUSKY=0 standard-version",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
