--- a/package.json
+++ b/package.json
@@ -33,17 +33,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.4",
-    "@emotion/eslint-plugin": "^11.2.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-compat": "^3.13.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-unicorn": "^37.0.1"
+    "@babel/runtime": "^7.15.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
@@ -59,5 +49,17 @@
     "lint-staged": "^11.2.3",
     "prettier": "^2.4.1",
     "standard-version": "^9.3.1"
+  },
+  "peerDependencies": {
+    "@emotion/eslint-plugin": "^11.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-compat": "^3.13.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-unicorn": "^37.0.1"
   }
 }
