--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./dist/index.js",
   "author": {
     "name": "Tomás Hernández",
-    "email": "tomas.hernandez03@gmail.com"
+    "email": "code@thernandez.me"
   },
   "keywords": [
     "eslint",
