--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.22.15",
-    "@babel/runtime": "^7.22.15",
+    "@babel/runtime": "7.23.1",
     "@emotion/eslint-plugin": "^11.11.0",
-    "eslint": "^8.49.0",
+    "eslint": "8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-compat": "^4.2.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -49,8 +49,8 @@
     "eslint-plugin-unicorn": "^48.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.15",
-    "@babel/core": "^7.22.20",
+    "@babel/cli": "7.23.0",
+    "@babel/core": "7.23.0",
     "@commitlint/cli": "^17.7.1",
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-preset-thernandez": "^0.0.28",
